# openai-chat

./: Cargo.toml
src/: args.rs  main.rs
